# wireguard

./: Cargo.toml
.github/workflows/: on-push.yaml
src/: crypto.rs  lib.rs
src/peer/: mod.rs
src/proto/: mod.rs
wireguard/: Cargo.toml
wireguard-cli/: Cargo.toml
wireguard/src/: lib.rs  peer.rs  routing.rs  wire.rs
wireguard/src/peer/: crypto.rs  mod.rs  tests.rs
