[package]
name = "wireguard"
version = "0.1.0"
edition = "2021"

[features]
wire = []
crypto = ["wire", "ring"]
session = ["crypto"]
router = ["session"]
device = ["router"]

[dependencies]
ring = { version = "0.16.20", optional = true }
rand = { version = "0.8.5", optional = true }
x25519-dalek = "2.0.0-pre.1"