[package]
name = "wireguard"
version = "0.1.0"
edition = "2021"

[features]
wire = []
peer = ["wire", "chacha20poly1305", "blake2"]
routing = ["ip_network_table", "slab", "ip_network", "x25519-dalek"]

[dependencies]
ip_network_table = { version = "0.2.0", optional = true }
ip_network = { version = "0.4.1", optional = true }
slab = { version = "0.4.7", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
blake2 = { version = "0.10.4", optional = true }
x25519-dalek = { version = "2.0.0-pre.1", features = ["reusable_secrets"], optional = true }
rand_core = "0.6.3"